--- a/arch/arm/dts/stm32mp157a-fsmp1a-u-boot.dtsi
+++ b/arch/arm/dts/stm32mp157a-fsmp1a-u-boot.dtsi
@@ -11,6 +11,7 @@
 	aliases {
 		i2c3 = &i2c4;
 		mmc0 = &sdmmc1;
+        mmc1 = &sdmmc2;
 		usb0 = &usbotg_hs;
 	};
 	config {
@@ -161,7 +162,9 @@
 &sdmmc1 {
 	u-boot,dm-spl;
 };
-
+&sdmmc2 {
+    u-boot,dm-spl;
+};
 &sdmmc1_b4_pins_a {
 	u-boot,dm-spl;
 	pins1 {
